# Data-Bureau

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  entrypoint.sh  fly.toml  manage.py  model.txt  package-lock.json  pyproject.toml  start-beat.sh  start-celery.sh  start-flower.sh  start.sh
.fly/scripts/: start.sh
.github/workflows/: fly.yml
SPA/: .env  README.md  config-overrides  config-overrides.js  package-lock.json  package.json  tsconfig.json  tsconfig.path.json  webpack.config.ts
SPA/public/: index.html
SPA/src/: App.css  App.styl  App.tsx  index.tsx
SPA/src/assets/: global_style.styl
SPA/src/components/: index.tsx
SPA/src/lib/: utils.tsx
SPA/src/routes/: constants.ts  index.tsx  loader.ts
SPA/src/store/: index.ts  reducer.ts
SPA/src/types/: index.d.ts
apps/: urls.py
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_auto_20230215_1702.py  0003_remove_borrowerprofile_user_alter_user_role.py  0004_alter_borrowertolenderaccount_identifier.py  0005_borrowerprofile_created_borrowerprofile_updated_and_more.py  0006_m.py  0007_m.py  0008_m.py  0009_m.py  0010_m.py  0011_m.py  (+8 more)
apps/client/: endpoints.py  permissions.py  serializers.py  urls.py  views.py
apps/dashboard/: admin.py  endpoints.py  models.py  serializers.py  urls.py
apps/lib/: abstract_models.py  utils.py
data_bureau/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docker.local/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  entrypoint.sh
docker.local/nginx/: nginx.conf
docker.prod/: Dockerfile.backend
nginx/: nginx.conf
scripts/: start-beat.sh  start-celery.sh  start-flower.sh
settings/: _base.py  celery.py  local.py  prod.py
tests/factories/: dashboard.py
(+110 files in other folders)
